--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Basic
-title: 潘柏信
+title: 李自宽
 subtitle: 个人站
 description: 欢迎来到我的个人站~
 # 头像里面的标题
 avatarTitle: leopardpan
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
-url: "http://baixin.io"
+avatarDesc: python
+url: "https://lizikuan.github.io"
 
 # Comment
 comment:
@@ -24,12 +24,6 @@ social:
 # 使用博客模板请去掉或者更换 id 
 baidu:
     id: 8ba1c6be0953b6f9c2ba38e57f615421  
-
-# Google Analytics
-# 使用博客模板请去掉或者更换 id
-ga:
-    id: UA-84134159-3   
-    host: auto  
 
 
 # 《----------------- 上面的信息修改成你自己的 ---------------------------》
